--- a/employee/layout/sidebar.html
+++ b/employee/layout/sidebar.html
@@ -9,7 +9,7 @@
   <a href="thong-tin.html" class="text-white text-decoration-none py-2">
     <i class="bi bi-person-fill me-2"></i>Thông Tin Cá Nhân
   </a>
-  <a href="dang-xuat.html" class="btn btn-outline-light btn-sm mt-3 w-100">
+  <a href="../index.html" class="btn btn-outline-light btn-sm mt-3 w-100">
     <i class="bi bi-box-arrow-right me-2"></i>Đăng Xuất
   </a>
 </div>
